Support a default classifier at startup
This commit provides some parameter control over what happens when num_darknet_ros_mgr starts up. Now it checks config params to determine if there is a default classifier setup. It also responds to the save_config topics (via the new num_sdk_base/save_cfg_if python module), saving whatever its current settings are as the new defaults.

--- a/darknet_ros/CMakeLists.txt
+++ b/darknet_ros/CMakeLists.txt
@@ -230,6 +230,12 @@ install(DIRECTORY yolo_network_config/
   USE_SOURCE_PERMISSIONS
 )
 
+# Install Manager Configuration
+install(DIRECTORY etc/
+  DESTINATION ${CATKIN_GLOBAL_ETC_DESTINATION}/num_darknet_ros_mgr
+  USE_SOURCE_PERMISSIONS
+)
+
 # Download yolov2-tiny.weights
 # set(PATH "${CMAKE_CURRENT_SOURCE_DIR}/yolo_network_config/weights")
 # set(FILE "${PATH}/yolov2-tiny.weights")
