--- a/darknet_ros/package.xml
+++ b/darknet_ros/package.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0"?>
 <package format="2">
-  <name>num_darknet_ros</name>
+  <name>nepi_darknet_ros</name>
   <version>1.1.4</version>
   <description>Darknet is an open source neural network framework that runs on CPU and GPU. You only look once (YOLO) is a state-of-the-art, real-time object detection system.</description>
   <maintainer email="marko.bjelonic@mavt.ethz.ch">Marko Bjelonic</maintainer>
@@ -20,8 +20,8 @@
   <depend>message_generation</depend>
   <depend>darknet_ros_msgs</depend>
   <depend>actionlib</depend>
-  <depend>num_sdk_msgs</depend>
-  <depend>num_sdk_base</depend>
+  <depend>nepi_ros_interfaces</depend>
+  <depend>nepi_edge_sdk_base</depend>
 
   <!-- Test dependencies -->
   <test_depend>rostest</test_depend>
