--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "darknet"]
 	path = darknet
-	url = https://github.com/kunaltyagi/darknet
+	url = git@github.com:numurus-nepi/darknet.git
