--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "darknet"]
 	path = darknet
-	url = git@github.com:numurus-nepi/darknet.git
+	url = git@github.com:nepi-engine/darknet.git
