--- a/darknet_ros/package.xml
+++ b/darknet_ros/package.xml
@@ -21,7 +21,7 @@
   <depend>darknet_ros_msgs</depend>
   <depend>actionlib</depend>
   <depend>nepi_ros_interfaces</depend>
-  <depend>nepi_edge_sdk_base</depend>
+  <depend>nepi_sdk</depend>
 
   <!-- Test dependencies -->
   <test_depend>rostest</test_depend>
